--- a/TfsHistorySearchUI/TfsHistorySearchUI.csproj
+++ b/TfsHistorySearchUI/TfsHistorySearchUI.csproj
@@ -29,6 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,10 +56,18 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TfsHelper\TfsHelper.csproj">
+    <ProjectReference Include="..\TfsHelper\TfsHelperLib.csproj">
       <Project>{1f6264c0-3106-4276-8b82-51b6925ec2c6}</Project>
-      <Name>TfsHelper</Name>
+      <Name>TfsHelperLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Key.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TfsHistorySearchWinForm.resx">
+      <DependentUpon>TfsHistorySearchWinForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
