--- a/TFSHistorySearch/TFSHistorySearch.csproj
+++ b/TFSHistorySearch/TFSHistorySearch.csproj
@@ -160,6 +160,9 @@
     <None Include="Resources\Images.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="LICENSE.txt">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\Package.ico" />
   </ItemGroup>
   <ItemGroup>
