--- a/TfsHistorySearchUI/TfsHistorySearchUI.csproj
+++ b/TfsHistorySearchUI/TfsHistorySearchUI.csproj
@@ -70,6 +70,9 @@
       <DependentUpon>TfsHistorySearchWinForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="search.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
